Fix extra space on right of page due to padding value

--- a/assets/css/site.sass
+++ b/assets/css/site.sass
@@ -12,7 +12,8 @@ $table-border-color: transparent
   padding: 10px
 
 .overlay
-  padding: 50px 5px
+  padding-top: 50px
+  padding-bottom: 50px
   background: $over-bg
 
 .section-heading
